# gaba-bank

./: .gitignore  README.md
gaba-bank/: README.md  eslint.config.js  jest.config.cjs  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  tsconfig.dev.json  vite.config.ts
gaba-bank/contracts/user-data/: Cargo.toml
gaba-bank/specs/001-feature-description-project/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
gaba-bank/src/: App.module.css  App.tsx  index.css  types.ts
gaba-bank/src/components/: CardSkeleton.tsx  Footer.tsx  Header.tsx  ProtectedButton.tsx  TabaDAOLogo.tsx  TableSkeleton.tsx  WalletConnectionDialog.tsx  config.ts  data-table.tsx  nav-documents.tsx  nav-favorites.tsx  (+3 more)
server/: .gitignore  DO_ZERO_AO_PRECISO.md  FROM_ZERO_TO_PRECISION.md  GOLDEN_RULES_FOR_MONEY_AND_PRECISION.md  ISSUES.md  README.md  README_EN.md  REGRAS_DE_OURO_DINHEIRO_E_PRECISAO.md  TODO.md  makefile
server/api/: Dockerfile  app.ts  debug-env.js  docker-compose.yml  docs-server.js  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  products.json  server.ts  start.sh  tsconfig.json  vitest.config.ts
server/contracts/defy-vault/: Cargo.toml
server/contracts/defy-vault/src/: lib.rs
server/docs/: 01_main.md  01_main_EN.md  02_observability.md  02_observability_EN.md  03_mint_BRLD.md  03_mint_BRLD_EN.md  04_pool_creation.md  04_pool_creation_EN.md  05_vault_USDC_Soroban_creation.md  05_vault_USDC_Soroban_creation_EN.md  06_vault_withdraw.md  06_vault_withdraw_EN.md
server/tools/: gen-treasury.js
(+204 files in other folders)
